--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build-and-push:
-    run-on: unbuntu-latest
+    runs-on: unbuntu-latest
     permissions:
       contents: read
       packages: write
