--- a/pipeline/jenkinsFile
+++ b/pipeline/jenkinsFile
@@ -1,10 +1,5 @@
 pipeline {
-    agent {
-        docker {
-            image 'python:3.11-slim'
-            args '-u root:root --init'
-        }
-    }
+    agent any
 
     stages {
         stage('Checkout SCM') {
@@ -15,9 +10,12 @@ pipeline {
         }
         stage('Create and activate a virtual environment'){
             steps {
+                // Use Docker CLI to provide Python if the declarative docker agent isn't available
                 sh '''
-                   python3 -m venv venv
-                   source venv/bin/activate
+                   # Create venv inside an ephemeral python container and mount the workspace
+                   # Use the current UID/GID so files are created with correct ownership
+                   docker run --rm -u $(id -u):$(id -g) -v "$PWD":/workspace -w /workspace python:3.11-slim \
+                     bash -lc "python3 -m venv venv && ./venv/bin/pip install -r requirements.txt || true"
                 '''
             }
         }
