--- a/pipeline/jenkinsFile
+++ b/pipeline/jenkinsFile
@@ -13,6 +13,7 @@ pipeline {
                 sh '''
                    python3 -m venv venv
                    . venv/bin/activate
+                   venv/bin/pip install -r requirements.txt
                 '''
             }
         }
