--- a/pipeline/jenkinsFile
+++ b/pipeline/jenkinsFile
@@ -21,12 +21,24 @@ pipeline {
             steps {
                                 // Try to run the Flask app using the venv if present, else python3, else docker
                 sh '''
+                    python3 -m venv venv
+                   . venv/bin/activate
                     export FLASK_APP=${WORKSPACE}/app.py
                     python3 -m flask run --port 8080 &
                     echo $! > .app_pid
                     echo "Flask started with PID $(cat .app_pid)"
                 '''
             }
+        }
+        stage('Test'){
+            steps {
+                sh '''
+                    python3 -m venv venv
+                    . venv/bin/activate
+                    python3 -m pytest -q
+                '''
+            }
+            
         }
     
     }
